# DevOps_lab3

./: AUTHORS  Dockerfile  Makefile  Makefile.am  Makefile.in  NEWS  README  config.h  config.status  configure.ac  configure~  hello  http_server.py  test_http_server.py
.github/workflows/: ci.yml
autom4te.cache/: output.1  requests  traces.0  traces.1
debian/: README  README.Debian  README.source  autoreconf.after  autoreconf.before  changelog  control  debhelper-build-stamp  devops-lab3.cron.d.ex  devops-lab3.doc-base.ex  files  manpage.1.ex  manpage.md.ex  manpage.sgml.ex  manpage.xml.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex
debian/.debhelper/devops-lab3/: dbgsym-build-ids
debian/.debhelper/devops-lab3/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/devops-lab3/dbgsym-root/usr/share/doc/: devops-lab3-dbgsym
debian/devops-lab3/DEBIAN/: control  md5sums
debian/devops-lab3/usr/share/doc/devops-lab3/: copyright
